# film-lut

./: .gitignore  README.md  lutex.py  pyproject.toml
docs/superpowers/research/: 2026-06-14-5207-community-research-r1.md  2026-06-14-5207-final-report.md  2026-06-14-5207-r1-merged.md  2026-06-14-5207-r1-verifier.md  (+35 more)
engine/: apply.py  core.py  lut3d.py  preset.py
luts/: Fuji_c200.cube  Hasselblad.cube  Kodak_5207.cube  Kodak_gold200.cube  Kodak_gold200_VL.cube  L-Log_to_Cine_VLog.cube  L-Log_to_Pure_VLog.cube  Leica_m9_day.cube  Leica_m9_soft.cube  Leica_m9_strong.cube  Ricoh_positive.cube  S9_Standard_to_5207.cube  S9_Standard_to_5219.cube  S9_Standard_to_c200.cube  S9_Standard_to_gold200.cube  S9_Standard_to_hassy_blue.cube  S9_Standard_to_leica_classic.cube  S9_Standard_to_ricoh_positive_film.cube  S9_VLog_to_5219.cube  S9_VLog_to_c200.cube  S9_VLog_to_gold200.cube  S9_VLog_to_hassy_blue.cube  S9_VLog_to_leica_classic.cube  S9_VLog_to_m9_ccd_day.cube  S9_VLog_to_m9_ccd_soft.cube  S9_VLog_to_m9_ccd_strong.cube  S9_VLog_to_ricoh_negative_film.cube  S9_VLog_to_ricoh_positive_film.cube
presets/: 5207.py  5219.py  c200.py  gold200.py  hassy_blue.py  leica_classic.py  m9_ccd_day.py  m9_ccd_soft.py  m9_ccd_strong.py  ricoh_negative_film.py  ricoh_positive_film.py
tests/: test_vlog_and_cube.py
tools/: analyze_c200_regions.py  analyze_c200_samples.py  analyze_c200_scans.py  analyze_chart.py  analyze_hassy_blue.py  analyze_hassy_blue_r2.py  c200_final_calibration.py  compare_impact.py  compare_paths.py  create_comparison.py  generate_color_chart.py
(+5 files in other folders)
