[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "film-lut-engine"
version = "0.1.0"
description = "Film Emulation 3D LUT Generator for Panasonic S9"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.scripts]
lutex = "lutex:main"

[tool.setuptools]
py-modules = ["lutex"]
